--- a/CSS/style.css
+++ b/CSS/style.css
@@ -198,10 +198,27 @@ margin: 0;
   gap: 1.75vw;
 }
 .activites_card {
-  width: 21.571vw;
+  width: 23.5%;
   height: 31.714vw;
+  border-radius: 20px;
 }
 .activites img {
   height: 27.786vw;
   width: 100%;
+  border-radius: 20px 20px 0 0;
+}
+/* FOOTER */
+footer {
+  background-color: #F2F2F2;
+}
+.footer_container {
+  display: flex;
+  padding: 3vw 4vw 3vw 4vw;
+  gap: 15.5vw;
+}
+footer ul {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1vw;
 }
