--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,112 +1,112 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
-  body {
-    max-width: 1400px;
-    font-family: "Raleway", sans-serif;
-  }
-  /* POLICES */
-  a {
-    text-decoration: none;
-    color: black
-  }
-  i {
-    color: #0065FC;
-  }
-  ::placeholder, .searchbar i {
-    color: black;
-    opacity: 1;
-  }
-  ul {
-    list-style-type: none;
-  }
-  h1, h4 {
-    font-size: 1.57vw;
-  }
-  h2, nav a, .infobar p, h5, footer li {
-    font-size: 1.143vw;
-  }
-  form, input, button, h3, .more {
-    font-size: 1.296vw;
-  }
-  main li {
-    font-size: 1.214vw;
-  }
-  .hotels p {
-    font-size: 1vw;
-  }
-  img {
-    object-fit: cover;
-  }
-  /* HEADER */
-  header {
-    display: flex;
-    justify-content: space-between;
-  }
-  nav {
-    display: flex;
-    justify-content: space-between;
-    gap: 5em;
-  }
-  header img {
-    height: 1.75vw;
-  }
-  /* PREMIERE PARTIE DU MAIN */
-  /* BARRE DE RECHERCHE */
-  form {
-    display: flex;
-  }
-  .searchbar i {
-    background-color: #F2F2F2;
-    padding: 1em 1.125em;
-    border-radius: 15px 0 0 15px;
-  }
-  input {
-    padding: 0.7em;
-    border: 1px solid #F2F2F2;
-  }
-  button span {
-    color: white;
-  }
-  form :last-of-type i {
-    display: none;
-  }
-  button {
-    background-color: #0065FC;
-    padding: 0.7em 1em;
-    border: 1px solid #0065FC;
-    border-radius: 0 15px 15px 0;
-  }
-  /* FILTRES */
-  .filterbar {
-    display: flex;
-  }
-  .filterbar ul {
-    display: flex;
-    padding-left: 1.5em;
-    margin: auto;
-    gap: 2.5em;
-    width: 95%;
-  }
-  .filterbar i {
-    margin: 0.25em;
-  }
-  li span {
-    border: 2px solid #D9D9D9;
-    border-radius: 20px;
-    padding: 0.5em 1em 0.5em 0.5em;
-  }
-  li span:hover {
-    background-color: #deebff;
-  }
-  /* BARRE INFO */
-  .infobar {
-    display: flex;
-  }
-  .infobar span {
-    height: auto;
-    border: 1px solid #D9D9D9;
-    border-radius: 25px;
-    padding: 0.25em;
-  }
+body {
+  max-width: 1400px;
+  font-family: "Raleway", sans-serif;
+}
+/* POLICES */
+a {
+  text-decoration: none;
+  color: black
+}
+i {
+  color: #0065FC;
+}
+::placeholder, .searchbar i {
+  color: black;
+  opacity: 1;
+}
+ul {
+  list-style-type: none;
+}
+h1, h4 {
+  font-size: 1.57vw;
+}
+h2, nav a, .infobar p, h5, footer li {
+  font-size: 1.143vw;
+}
+form, input, button, h3, .more {
+  font-size: 1.296vw;
+}
+main li {
+  font-size: 1.214vw;
+}
+.hotels p {
+  font-size: 1vw;
+}
+img {
+ object-fit: cover;
+}
+/* HEADER */
+header {
+  display: flex;
+  justify-content: space-between;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  gap: 5em;
+}
+header img {
+  height: 1.75vw;
+}
+/* PREMIERE PARTIE DU MAIN */
+/* BARRE DE RECHERCHE */
+form {
+  display: flex;
+}
+.searchbar i {
+  background-color: #F2F2F2;
+  padding: 1em 1.125em;
+  border-radius: 15px 0 0 15px;
+}
+input {
+  padding: 0.7em;
+  border: 1px solid #F2F2F2;
+}
+button span {
+  color: white;
+}
+form :last-of-type i {
+  display: none;
+}
+button {
+  background-color: #0065FC;
+  padding: 0.7em 1em;
+  border: 1px solid #0065FC;
+  border-radius: 0 15px 15px 0;
+}
+/* FILTRES */
+.filterbar {
+  display: flex;
+}
+.filterbar ul {
+  display: flex;
+  padding-left: 1.5em;
+  margin: auto;
+  gap: 2.5em;
+  width: 95%;
+}
+.filterbar i {
+  margin: 0.25em;
+}
+li span {
+  border: 2px solid #D9D9D9;
+  border-radius: 20px;
+  padding: 0.5em 1em 0.5em 0.5em;
+}
+li span:hover {
+  background-color: #deebff;
+}
+/* BARRE INFO */
+.infobar {
+  display: flex;
+}
+.infobar span {
+  height: auto;
+  border: 1px solid #D9D9D9;
+  border-radius: 25px;
+  padding: 0.25em;
+}
 .infobar i {
   height: 0.25em;
   padding: 0.5em 0.5em 0.5em 0.5em;
@@ -149,16 +149,33 @@ margin: 0;
 .card {
   background-color: #FFFF;
   width: 30.95%;
-  height: 15vw;
+  height: 14.214vw;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 .card img {
   object-fit: cover;
   height: 60%;
   border: 5px solid #FFFF;
   border-radius: 20px 20px 0 0;
+}
+.card_info {
+  height: 35%;
+  padding: 0.286vw 1vw;
+  gap: 0.25vw;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.score_container {
+  font-size: 1.15vw;
+  display: flex;
+  margin-top: 0.5vw;
+}
+.score_container i:last-of-type {
+  color: #F2F2F2;
 }
 /* LES PLUS POPULAIRES */
 .card_title {
@@ -183,13 +200,21 @@ margin: 0;
   height: 10.25vw;
   background-color: #FFFF;
   border-radius: 20px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 .popular img {
   min-width: 40%;
   max-width: 40%;
-  height: 9.75vw;
+  min-height: 9vw;
+  max-height: 9.75vw;
   border: 5px solid #FFFF;
   border-radius: 20px 0 0 20px;
+}
+.popular_card_info {
+  display: flex;
+  flex-direction: column;
+  padding: 1vw 1vw 1.5vw;;
+  justify-content: space-between;
 }
 /* ACTIVITES A MARSEILLE */
 .activites_cards {
@@ -201,11 +226,15 @@ margin: 0;
   width: 23.5%;
   height: 31.714vw;
   border-radius: 20px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 .activites img {
   height: 27.786vw;
   width: 100%;
   border-radius: 20px 20px 0 0;
+}
+.activites h5 {
+  margin: 1vw;
 }
 /* FOOTER */
 footer {
